fix: align h1 with the rest of the content

--- a/apps/merch/src/app/app.component.scss
+++ b/apps/merch/src/app/app.component.scss
@@ -1,4 +1,5 @@
-.products {
+.products,
+header {
   display: flex;
   justify-content: center;
 }
